...
    func showError(_ message: String)
}

class HomeViewController: BaseViewController  {
    
    
    @IBOutlet weak var tableView: UITableView!
    
    
    @IBOutlet weak var searchBar: UISearchBar!
    
    var presenter: HomePresenterProtocol!
    var isSearchBarEmpty: Bool {
        return searchBar.text?.isEmpty ?? true
    }
    
...
