...
    
    @IBOutlet weak var collectionPriceLabel: UILabel!
    
    @IBOutlet weak var typeOfSong: UILabel!
    
    
    @IBOutlet weak var playButton: UIButton!
    
    
    @IBOutlet weak var likedButton: UIButton!
    
    
    @IBOutlet weak var progressView: UIProgressView!
    
    // MARK: - Properties
    
...
